# ssrl_hackaton

./: .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: functions-config.cmake
examples/: CMakeLists.txt
examples/00_forward_declaration/few_files/: bot.cxx  main.cxx
examples/00_forward_declaration/one_file/: CMakeLists.txt  main.cxx
modules/: CMakeLists.txt
src/: CMakeLists.txt  base.cpp  base.h  config.h  main.cpp
src/api/: CMakeLists.txt  base.cxx  base.h  base_types.cxx
src/game/: CMakeLists.txt  animation.hxx  game.cxx  game.hxx
src/yg_engine/: CMakeLists.txt  main.cxx  ygforwards.hxx
src/yg_engine/examples/00_forward_declaration/few_files/: player.cxx  player.hxx
src/yg_engine/examples/01_catch_unittests/: CMakeLists.txt  main.cxx
src/yg_engine/libs/: CMakeLists.txt
src/yg_engine/modules/: CMakeLists.txt
src/yg_engine/window/: window_manager.cxx  window_manager.hxx  window_sdl.cxx  window_sdl.hxx
src/yg_engine/window/render/: render_context.hxx  render_context_opengl.cxx  render_context_opengl.hxx
